[gd_scene load_steps=4 format=3 uid="uid://dwrb20ty0gvsi"]

[ext_resource type="Script" uid="uid://bgyvrs8xqtdhr" path="res://scenes/wave_button.gd" id="1_mxbp7"]
[ext_resource type="Texture2D" uid="uid://kgb3j3gxebfc" path="res://art/ui/sword-clash(1).png" id="2_8tnbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vswhx"]
bg_color = Color(0.41960785, 0.6784314, 0.21176471, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="WaveButton" type="PanelContainer" groups=["NextWaveButton"]]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -560.0
offset_top = -189.0
offset_right = -391.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.65682995, 0.65682995)
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_vswhx")
script = ExtResource("1_mxbp7")
normal_color = Color(1, 1, 1, 1)
hover_color = Color(1, 0.5568628, 0.34509805, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("2_8tnbd")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_right = 25

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/line_spacing = -7
theme_override_font_sizes/font_size = 36
text = "NEXT 
WAVE"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
